--- a/package.json
+++ b/package.json
@@ -62,8 +62,9 @@
     "bs58": "^4.0.1",
     "chart.js": "^2.7.3",
     "crypto-js": "^3.1.9-1",
-    "keytar": "^4.3.0",
+    "electron-store": "^2.0.0",
     "moment": "^2.22.2",
+    "node-machine-id": "^1.1.10",
     "ripemd160": "^2.0.2",
     "secp256k1": "^3.5.2",
     "sha.js": "^2.4.11",
