--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "chart.js": "^2.7.3",
     "crypto-js": "^3.1.9-1",
     "electron-store": "^2.0.0",
+    "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "node-machine-id": "^1.1.10",
     "ripemd160": "^2.0.2",
