--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "vue-chartjs": "^3.4.0",
     "vue-electron": "^1.0.6",
     "vue-feather-icons": "^4.7.1",
+    "vue-i18n": "^8.3.2",
     "vue-notification": "^1.3.13",
     "vue-qriously": "^1.1.1",
     "vue-router": "^3.0.1",
