--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nworld-wallet",
+  "name": "nytro-wallet",
   "version": "0.9.0",
   "author": "Moshe Malawach <moshe.malawach@protonmail.com>",
   "description": "Desktop wallet for the NULS blockchain using the NULS.World API",
@@ -22,8 +22,8 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "nworld-wallet",
-    "appId": "world.nuls.wallet",
+    "productName": "nytro-wallet",
+    "appId": "nytro.nuls.wallet",
     "directories": {
       "output": "build"
     },
