--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "vue-electron": "^1.0.6",
     "vue-feather-icons": "^4.7.1",
     "vue-i18n": "^8.3.2",
+    "vue-markdown": "^2.2.4",
     "vue-notification": "^1.3.13",
     "vue-qriously": "^1.1.1",
     "vue-router": "^3.0.1",
