--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bigi": "^1.4.2",
+    "bootstrap": "^4.3.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "bs58": "^4.0.1",
     "crypto-js": "^3.1.9-1",
