--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
     "test": "npm run unit && npm run e2e",
     "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": "npm run lint:fix"
+    "postinstall": "electron-builder install-app-deps"
   },
   "build": {
     "productName": "nytro-wallet",
@@ -65,6 +65,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "bs58": "^4.0.1",
     "crypto-js": "^3.1.9-1",
+    "electron-ipcp": "^1.0.0",
     "electron-store": "^2.0.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
